[tool.poetry]
name = "vg-test"
version = "0.1.0"
description = ""
authors = ["Muhannad <Muhannadalmughrabi233@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
pandas = "^1.2.4"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
